2019-09-21 Christopher Arndt <aur -at- chrisarndt -dot- de>
    * 1:1.11.r10585.d96391aca-1:
	- Simplified pkgver function

2018-07-23 Christopher Arndt <aur -at- chrisarndt -dot- de>
	* 1:1.9.4.405.g7067ac357-1:
	Added -Wno-error=array-bounds compiler flag to make invocation for axtls.

2017-12-13 Christopher Arndt <aur -at- chrisarndt -dot- de>
	* 1:1.9.3.161.g43141ddb5
	Install 'mpy-cross' binary.

2017-01-27 Christopher Arndt <aur -at- chrisarndt -dot- de>
	* 1:1.9.2.83.g6e06512e0-1
	Adapted PKGBUILD to new source repository layout.

2017-01-27 Christopher Arndt <aur -at- chrisarndt -dot- de>

	* 1:1.8.7.108.g0390bc97e-2 :
	Fixed date of previous package version in this ChangeLog.
    Disabled executable stack for 'micropython' binary.

2017-01-27 Christopher Arndt <aur -at- chrisarndt -dot- de>

	* 1:1.8.7.108.g0390bc97e-1 :
	Changed package versioning scheme: now includes upstream version and git
	  info to match what MicroPython REPL banner shows.
	Removed 'readline' from depends, MicroPython now uses its own readline
	  implementation.
	Removed 'pip-setuptools' and 'pip-virtualenv' from optdepends, the
	  'pip-micropython' tool is deprecated and not installed anymore.
	Adapted to upstream changes in compilation procedure.
	Added workround to fix compilation errors in axtls due to leaking of
	  -Werror in CFLAGS from top-level Makefile in makepkg build environment.